# stew

./: CMakeLists.txt  README.md
include/: ascii.h  hll.h  hll_private.h  ketopt.h  kseq.h
src/: city.c  hll.c  main.c
